Guessing game. Added a list to HTML for guesses Hiding list with js At click of button event - value is compared to rng if not withing 1-100 error message will display and no log else the function will compare than input guess to list

--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
         <div class="modalGame">
             <h1 class="gameTitle">Number Guessing Game</h1>
             <h3 class="enterNo"><br>Enter a number between 1-100</h3>
-            <!-- Here enters prompt wether it be higher or lower than input number -->
             <input type="text" class="guessField">
             <button class="enterGuess">Guess</button>
             <h2 class="prevGuess">Your Previous Guesses:</h2>
+            <ol class="guessList">
+                <li class="guessOne"></li>
+                <li class="guessTwo"></li>
+                <li class="guessThree"></li>
+                <li class="guessFour"></li>
+                <li class="guessFive"></li>
+            </ol>
             <!-- Here should be an OL of previous guess -->
         </div>
     </div>
